# daily-strip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: release-plz.yml  release.yml  test.yml
src/: backend.rs  lib.rs  main.rs
src/fetcher/: achewood.rs  butter_safe.rs  buttercup_festival.rs  cad_comics.rs  cat_and_girl.rs  cornet_comics.rs  diesel_sweeties_1_0.rs  diesel_sweeties_3_0.rs  dinosaur_comics.rs  gt2.rs  gunnerkrigg_court.rs  joy_of_tech.rs  js_power_hour.rs  mod.rs  monkey_user.rs  oglaf.rs  phd.rs  poorly_drawn_lines.rs  questionable_content.rs  softer_world.rs  three_word_phrase.rs  turnoff_us.rs  work_chronicles.rs  xkcd.rs
src/frontend/: egui.rs  mod.rs  slint.rs
src/frontend/slint-ui/: main.slint
