[package]
name = "daily_strip"
version = "0.1.11"
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "Comic strips viewer"
readme = "README.md"
homepage = "https://github.com/newfla/daily-strip"
repository = "https://github.com/newfla/daily-strip"
keywords = ["strip", "comics"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
rand = "0.9.0"
reqwest = "0.12.4"
rss = "2.0.6"
scraper = "0.22.0"
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0.3"
tokio = { version = "1.33.0", features = ["fs", "macros", "rt-multi-thread"]}
tokio-util = "0.7.11"

#egui deps
eframe = {version = "0.31.0", optional = true}
egui-theme-switcher = {version = "0.1.3", optional = true}
egui-file-dialog = {version = "0.8.0", optional = true}
egui_extras = {version = "0.30.0", features = ["default", "all_loaders"], optional = true }
image = {version = "0.25.1", features = ["jpeg", "png", "gif"]} 

#slint deps
slint = {version = "1.9.0", optional = true}
open = { version = "5.3.0", optional = true}
native-dialog = { version = "0.7.0", optional = true}
[build-dependencies]
slint-build = {version = "1.9.0", optional = true}


[features]
default = ["slint_frontend"]
egui_frontend = ["eframe", "egui-theme-switcher", "egui-file-dialog", "egui_extras"]
slint_frontend = ["slint", "slint-build", "open", "native-dialog"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "upload"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
